# Openclassrooms_P7

./: .gitignore  pyproject.toml
notebooks/: P7_part1.ipynb  P7_part2.ipynb  P7_part3.ipynb  P7_semi_supervisee.ipynb  plot_probas
notebooks/utils/: analysis.py  clustering.py  data_manipulation.py  dataset.py  features_type_list.py  models.py  reducing_dim.py  training.py
notebooks/utils/plotting/: config_figures.py  make_model_plots.py  make_stat_plots.py
