[project]
name = "livrable-p7"
version = "0.1.0"
description = ""
authors = [
    {name = "S-S-Zheng",email = "zheng.shipo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (<2.0.0)",
    "pandas (>=3.0.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "livrable_p7", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "notebook (>=7.5.3,<8.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "shap (>=0.45.0,<0.50.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "sphinx (==7.2.6)",
    "furo (==2024.1.29)",
    "myst-parser (==2.0.0)",
    "pytest (==8.3.4)",
    "pytest-cov (==5.0.0)",
    "pytest-dotenv (==0.5.2)",
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.14.14,<0.15.0)"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I"]
