[project]
name = "livrable-p7"
version = "0.1.0"
description = ""
authors = [
    {name = "S-S-Zheng",email = "zheng.shipo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy",
    "pandas (>=3.0.0,<4.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "albumentations (>=2.0.8,<3.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.2,<5.0.0)"
]

[tool.poetry]
packages = [{include = "livrable_p7", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "notebook (>=7.5.3,<8.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
]